src/test/ui/array-slice-vec/infer_array_len.stderr
error[E0282]: type annotations needed
  --> $DIR/infer_array_len.rs:19:9
   |
LL |     let [_, _] = a.into();
   |         ^^^^^^ consider giving this pattern a type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
